<resources>
    <string name="app_name">GamerGiveAways</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="giveaway_image">giveaway image</string>
    <string name="title">title</string>
    <string name="price">price</string>
    <string name="status">status</string>
    <string name="date">date</string>
    <string name="platform">platform</string>
</resources>